--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ordPens
 Type: Package
 Title: Selection, Fusion, Smoothing and Principal Components Analysis for Ordinal Variables 
-Version: 0.4.0
-Date: 2020-08-18
+Version: 1.0
+Date: 2021-07-16
 Authors@R: c(
     person("Jan", "Gertheiss", email = "jan.gertheiss@hsu-hh.de", role = "aut"),
     person("Aisouda", "Hoshiyar", email = "aisouda.hoshiyar@hsu-hh.de", role = c("aut","cre")),
@@ -11,11 +11,17 @@ Description: Selection, fusion, and/or smoothing of ordinally scaled independent
 Depends: grplasso, mgcv, RLRsim, quadprog, glmpath 
 biocViews:  
 Suggests: 
-  psy 
+  psy,
+  knitr,
+  rmarkdown,
+  BiocManager, 
+  IsoGene,
+  Biobase
+VignetteBuilder: knitr
 License: GPL-2
 LazyLoad: yes
 NeedsCompilation: no
-Packaged: 2021-06-11 14:03:45 UTC; jgerthe_2
+Packaged: 2021-07-16 14:03:45 UTC; jgerthe_2
 Repository: CRAN 
 Additional_repositories: https://www.bioconductor.org
 Date/Publication: 2015-05-21 16:38:36
