--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,21 +8,16 @@ Authors@R: c(
     person("Aisouda", "Hoshiyar", email = "aisouda.hoshiyar@hsu-hh.de", role = c("aut","cre")),
     person("Fabian", "Scheipl", email = "fabian.scheipl@stat.uni-muenchen.de", role = "ctb"))  
 Description: Selection, fusion, and/or smoothing of ordinally scaled independent variables using a group lasso, fused lasso or generalized ridge penalty, as well as non-linear principal components analysis for ordinal variables using a second-order difference/smoothing penalty.
-Depends: grplasso, mgcv, RLRsim, quadprog, glmpath 
-biocViews:  
+Depends: grplasso, mgcv, RLRsim, quadprog, glmpath  
 Suggests: 
   psy,
   knitr,
-  rmarkdown,
-  BiocManager, 
-  IsoGene,
-  Biobase
+  rmarkdown 
 VignetteBuilder: knitr
 License: GPL-2
 LazyLoad: yes
 NeedsCompilation: no
 Packaged: 2021-07-16 14:03:45 UTC; jgerthe_2
-Repository: CRAN 
-Additional_repositories: https://www.bioconductor.org
+Repository: CRAN  
 Date/Publication: 2015-05-21 16:38:36
 
