--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ordPens
 Type: Package
 Title: Selection, Fusion, Smoothing and Principal Components Analysis for Ordinal Variables 
 Version: 1.0
-Date: 2021-07-16
+Date: 2021-08-17
 Authors@R: c(
     person("Jan", "Gertheiss", email = "jan.gertheiss@hsu-hh.de", role = "aut"),
     person("Aisouda", "Hoshiyar", email = "aisouda.hoshiyar@hsu-hh.de", role = c("aut","cre")),
@@ -16,8 +16,7 @@ Suggests:
 VignetteBuilder: knitr
 License: GPL-2
 LazyLoad: yes
-NeedsCompilation: no
-Packaged: 2021-07-16 14:03:45 UTC; jgerthe_2
+NeedsCompilation: no 
 Repository: CRAN  
-Date/Publication: 2015-05-21 16:38:36
+Date/Publication: 2015-05-21  
 
