--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,24 @@
 Package: ordPens
 Type: Package
 Title: Selection, Fusion, Smoothing and Principal Components Analysis for Ordinal Variables 
-Version: 1.0.0
+Version: 1.1.0
 Authors@R: c(
     person("Jan", "Gertheiss", email = "jan.gertheiss@hsu-hh.de", role = "aut"),
     person("Aisouda", "Hoshiyar", email = "aisouda.hoshiyar@hsu-hh.de", role = c("aut","cre")),
     person("Fabian", "Scheipl", email = "fabian.scheipl@stat.uni-muenchen.de", role = "ctb"))  
+Maintainer: Aisouda Hoshiyar <aisouda.hoshiyar@hsu-hh.de>
 Description: Selection, fusion, and/or smoothing of ordinally scaled independent variables using a group lasso, fused lasso or generalized ridge penalty, as well as non-linear principal components analysis for ordinal variables using a second-order difference/smoothing penalty.
-Depends: grplasso, mgcv, RLRsim, quadprog, glmpath  
+Depends: grplasso, mgcv, RLRsim, quadprog, glmpath
+Imports: ordinalNet
 Suggests: 
-  psy,
-  knitr,
-  rmarkdown 
+    utils,
+    psy,
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 License: GPL-2
 LazyLoad: yes
 NeedsCompilation: no 
 Repository: CRAN   
-
+Config/testthat/edition: 3
