--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,15 @@ import(mgcv)
 import(RLRsim)
 import(quadprog)
 import(glmpath)
- 
+
+importFrom("ordinalNet","ordinalNet") 
 importFrom("grDevices", "devAskNewPage", "grey")
 importFrom("graphics", "lines", "plot", "points", "rect", "segments")
 importFrom("stats", "anova", "binomial", "gaussian", "lm",
              "model.matrix", "plogis", "poisson", "prcomp", "predict",
-             "princomp", "sd")
-importFrom("utils", "askYesNo") 
+             "princomp", "sd", "na.omit", "dlogis")
+importFrom("utils", "askYesNo","modifyList") 
+
 
 S3method(plot, ordPen)
 S3method(predict, ordPen)
